Fixed font size for header on small screens

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -75,6 +75,12 @@
     text-align: right;
 }
 
+@media all and (max-device-width: 640px){
+    .header-note {
+        font-size: 20px;
+    }
+}
+
 .foot-note {
     padding: 5px;
     margin-bottom: 15px;
